--- a/miniprogram/pages/shops-detail/shops-detail.wxss
+++ b/miniprogram/pages/shops-detail/shops-detail.wxss
@@ -1,1 +1,127 @@
-/* pages/shops-detail/shops-detail.wxss */
+#body{
+    width: 100%;
+    height: 100%;
+    background-color: #FFE3CD;
+}
+image{
+    width: 100rpx;
+    height: 100rpx;
+}
+.header{
+    margin: 0;
+    padding: 0;
+    height: 440rpx;
+    /* background-color: pink; */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border-top: 1px solid #000000;
+    border-bottom: 6rpx solid #707070;
+}
+.header .shop-info{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 212rpx;
+    margin-top: 55.5rpx;
+}
+.header .shop-info .shop-info-pic-container{
+    width: 212rpx;
+    height: 212rpx;
+    /* margin-right: 300rpx; */
+    margin-left: 104rpx;
+    margin-right: 44rpx;
+}
+.header .shop-info .shop-info-pic-container image{
+    width: 212rpx;
+    height: 212rpx;
+    border-radius: 35rpx;
+}
+.header .shop-info .shop-info-items{
+    line-height: 60rpx;
+    /* margin: 100rpx; */
+    /* margin-left: 50rpx; */
+}
+/* .header .shop-info .details{
+    margin-left: -15rpx;
+} */
+.header .shop-info .shop-info-items .info-item:nth-child(1){
+font-size: 35rpx;
+font-weight: 1000;
+color: #463124;
+word-break: keep-all;
+}
+.header .shop-info .shop-info-items .info-item:nth-child(3){
+    font-weight: 400rpx;
+    color: #463124;
+    font-size: 35rpx;
+}
+
+.header .buttons{
+    display: flex;
+    justify-content: center;
+    margin-top: 40rpx;
+}
+.header .buttons button{
+    background-color: #74665D;
+    width: 268rpx;
+    height: 88rpx;
+    border-radius: 82.5rpx;
+    font-size: 35rpx;
+    color: #FFE3CD;
+}
+.header .buttons button:nth-child(1){
+    margin-left: 80rpx;
+}
+.header .buttons button:nth-child(2){
+    margin-right: 80rpx;
+}
+.header .buttons button:active{
+    background-color: rgb(37, 33, 33);
+}
+
+.selector-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    position: sticky;
+    top:0rpx;
+    z-index: 1;
+    font-size: 35rpx;
+    color: #463124;
+    background-color:#FFE3CD;
+    height: 88rpx;
+    line-height: 88rpx;
+}
+.selector-container radio-group{
+    display: flex;
+    flex-wrap: nowrap;
+}
+.selector-container .selector{
+    height: 88rpx;
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    line-height: 88rpx;
+    margin-right: 66rpx;
+}
+.selector-container text{
+    word-break: keep-all;
+}
+#rank-by-scores{
+    margin-left: 80rpx;
+}
+.selector-container checkbox .wx-checkbox-input{
+    border-radius: 50%;/* 圆角 */
+    width: 32rpx; /* 背景的宽 */
+    height: 32rpx; /* 背景的高 */
+}
+.selector-container radio .wx-radio-input{
+    border-radius: 50%;/* 圆角 */
+    width: 32rpx; /* 背景的宽 */
+    height: 32rpx; /* 背景的高 */
+}
+.selector-container radio .wx-radio-input-checked{
+    border-radius: 50%;
+    background-color: red;
+}
