--- a/miniprogram/pages/square/square.wxss
+++ b/miniprogram/pages/square/square.wxss
@@ -1,19 +1,19 @@
 /* pages/square/square.wxss */
 .check{
-    background-color: #ffc8b4;
+    background-color: #FFE3CC;
     height: 4%;
     text-align: right;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .box{
-    background-color: #ffc8b4;
+    background-color: #FFE3CC;
     width: auto;
     height: 96%;
 }
 
 .list{
-    background-color: rgb(255, 244, 213);
+    background-color: #fff1e6;
     margin: 25rpx;
     padding: 20rpx;
     height: 650rpx;
@@ -56,35 +56,77 @@
       top: -25rpx;
   }
 
-  /* swiper{
-      height: 300rpx;
-      width: 100%;
-  } */
+  .v-prove{
+      height: 70rpx;
+      width: 70rpx;
+  }
 
   .photo-list{
-      width: 100%;
-      height: 300rpx;
+      height: 260rpx;
+      width: 1150rpx;
       display: flex;
-      text-align: center;
+      overflow: hidden;
   }
 
-  .fra{
-      padding: 20rpx;
-      width: 400rpx;
+  .photo-list image {
+    width: 360rpx;
+    height: 240rpx;
+    flex-shrink: 0;
+    border-radius: 31.5rpx;
+    margin-left: 24.5rpx;
+    margin-bottom: 20rpx;
   }
 
-  .test1{
-      background-color: aqua;
-      width: 370rpx;
-      height: 300rpx;
+.user-info{
+    height: 98rpx;
+    /* background-color: red; */
+    color: #5f5e5e;
+    font-size: 30rpx;
+    font-weight: 600;
+    display: flex;
+    border-top: 2px solid lightslategrey;
+}
+
+.user-info image{
+    border-radius: 50%;
+    width: 59.5rpx;
+    height: 59.5rpx;
+    margin-left: 54.25rpx;
+    margin-top: 19.25rpx;
+    margin-right: 15rpx;
+}
+
+.user-info text{
+    height: 90rpx;
+    line-height: 98rpx;
+    display: block;
+}
+
+.comment-content{
+    height: 130rpx;
+    line-height: 98rpx;
+    border-bottom: 2px solid lightslategrey;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;      
+}
+
+.comment-infos {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 87.5rpx;
   }
-  .test2{
-    background-color: rgb(19, 155, 26);
-    width: 370rpx;
-    height: 300rpx;
-}
-  .test3{
-    background-color: rgb(77, 29, 122);
-    width: 370rpx;
-    height: 300rpx;
-}
+
+.comment-info {
+    display: flex;
+    align-items: center;
+    font-size: 28rpx;
+    color: #707070;
+  }
+
+.comment-info image {
+    width: 60rpx;
+    height: 60rpx;
+  }
+  
