--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -12,47 +12,13 @@
             </view>
         </view>
         <view class="buttons">
-            <button style="width: 210rpx;">我的收藏</button>
+            <button style="width: 210rpx;" bindtap="goToCollection">我的收藏</button>
             <button style="width: 210rpx;">作者认证</button>
-            <button style="width: 210rpx;">使用指南</button>
+            <button style="width: 210rpx;" bindtap="goToHelp">使用指南</button>
         </view>
 
     </view>
     <view class="comments">
-        <view class="comment-card" wx:for="{{info.comment}}" wx:key="index">
-            <view class="card-part shop-self">
-                <view class="shop-name">
-                    <image src="../../images1/image/coordinates_fill.svg"></image>
-                    <text>{{item.shop_name}}</text>
-                    <view>评分{{item.score}}</view>
-                </view>
-                <view class="shop-pic">
-                    <!-- 链接待添加 {{item.image_1}}-->
-                    <image src="../../images1/image/food.png" wx:if="{{item.image_1!=null}}"></image>
-                    <image src="../../images1/image/food.png" wx:if="{{item.image_2!=null}}"></image>
-                </view>
-            </view>
-            <view class="card-part user-comment">
-                <view class="user-info">
-                    <!-- {{item.user.user_profile_photo_url}} -->
-                    <image src="../../images1/image/user-img.png"></image>
-                    <text>{{info.user_name}}</text>
-                </view>
-                <view class="commet-content">
-                    {{item.content}}
-                    这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论这是评论
-                </view>
-            </view>
-            <view class="card-part comment-infos">
-                <view class="comment-info">
-                    <image src="../../images1/image/like.svg" bindtap="changeLike" data-count="{{item.like_num}}"></image>
-                    <text>{{item.like_num}}</text>
-                </view>
-                <view class="comment-info">
-                    <image src="../../images1/image/message.svg"></image>
-                    <text>{{item.huitie_num}}</text>
-                </view>
-            </view>
-        </view>
+        <comment-card wx:for="{{info.comment}}" wx:key="index" shop_name="{{item.shop_name}}" for_shop_score="{{item.score}}" for_user_name="{{info.user_name}}" for_like_count="{{item.like_num}}" for_review_count="{{item.huitie_num}}" if_image_url_1="{{item.image_1!=null}}" if_image_url_2="{{item.image_2!=null}}"></comment-card>
     </view>
 </view>
